--- a/EDACheckpointGroup_Sp23_AAA-H.ipynb
+++ b/EDACheckpointGroup_Sp23_AAA-H.ipynb
@@ -12514,21 +12514,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Median California annual household income in 2021(dollars) is:  84097\n",
-      "Median Texas annual household income in 2021(dollars) is:  67321\n",
-      "Median California annual housing cost in 2020(dollars) is:  20256.0\n",
-      "Median California annual household income in 2020(dollars) is:  78672\n",
+      "Median California annual housing cost in 2020 (dollars) is:  20256.0\n",
+      "Median California annual household income in 2020 (dollars) is:  78672\n",
       "Percentage between household income and housing prices California in 2020:  25.747\n",
-      "Median Texas annual housing cost in 2020(dollars) is:  13140.0\n",
-      "Median Texas annual household income in 2020(dollars) is:  63826\n",
-      "Percentage between household income and housing prices Texas in 2020:  20.587\n"
+      "Median Texas annual housing cost in 2020 (dollars) is:  13140.0\n",
+      "Median Texas annual household income in 2020 (dollars) is:  63826\n",
+      "Percentage between household income and housing prices Texas in 2020:  20.587\n",
+      "Median California annual housing cost in 2021 (dollars) is:  21492.0\n",
+      "Median California annual household income in 2021 (dollars) is:  84097\n",
+      "Percentage between household income and housing prices California in 2021:  25.556\n",
+      "Median Texas annual housing cost in 2020 (dollars) is:  13932.0\n",
+      "Median Texas annual household income in 2021 (dollars) is:  67321\n",
+      "Percentage between household income and housing prices Texas in 2021:  20.695\n"
      ]
     }
    ],
@@ -12539,9 +12543,6 @@
     "# Extract the median Texas household income in 2020 and 2021\n",
     "median_texas_household_income_2020 = int(texas_household_income_2020.at[11,'Occupied housing units'].replace(',',\"\"))\n",
     "median_texas_household_income_2021 = int(texas_household_income_2021.at[11,'Occupied housing units'].replace(',',\"\"))\n",
-    "\n",
-    "\n",
-    "\n",
     "\n",
     "# Calculate percentage between household income and housing cost\n",
     "median_california_housing_cost_2020 = new_df_states.loc[(new_df_states['State'] == 'California') & (new_df_states['Year'] == 2020) & (new_df_states['Housing Cost Category'] == '\\xa0\\xa0\\xa0\\xa0\\xa0\\xa0\\xa0\\xa0Median '), 'Housing Occupied housing units'].values[0]*12\n",
