fixed format + add explaination

--- a/EDACheckpointGroup_Sp23_AAA-H.ipynb
+++ b/EDACheckpointGroup_Sp23_AAA-H.ipynb
@@ -11186,7 +11186,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Hypothesis Test"
+    "### Relationship Between California's Housing Costs and Population"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Hypothesis Test"
    ]
   },
   {
@@ -11214,7 +11222,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Home Values"
+    "##### Home Values"
    ]
   },
   {
@@ -11562,7 +11570,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Rentals"
+    "##### Rentals"
    ]
   },
   {
@@ -11839,7 +11847,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After creating data visualizations for our datasets, we are interested in performing hypothesis test for rentals and population to see if there is sufficient evidence for our hypothesis."
+    "After creating data visualizations for our datasets, we are interested in performing a hypothesis test for rentals and population to see if there is sufficient evidence for our hypothesis."
    ]
   },
   {
@@ -11902,8 +11910,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Both results after checking statistical test from `Home Value` and `Rentals` reject H<sub>0</sub> and show there is a significant difference. Thus, we support our hypothesis that there is a relationship between the decrease in California's populations and the increase in cost of spending on housing (rent and owner-occupied) from 2020 to 2021.  \n",
-    "To determine if California residents are likely to move out of state because they are not able to afford housing, we will conduct futher analysis on housing prices and California residents household incomes."
+    "After checking the statistical test from `Home Value` and `Rentals`, both results reject H<sub>0</sub> and show a significant difference. Thus, we support our hypothesis that there is a relationship between the decrease in California's population and the increase in the cost of spending on housing (rent and owner-occupied) from 2020 to 2021. \n",
+    "To determine if California residents are likely to move out of state because they are not able to afford housing, we will conduct further analysis of housing prices and California residents' household incomes."
    ]
   },
   {
@@ -11911,7 +11919,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we will explore the cost of spending on housing (rent and owner-occupied) and household icomes from 2020 to 2021 to see if California residents are able to afford housing."
+    "Next, we will analyze our research questions to conduct further analysis on the cost of spending on housing (rent and owner-occupied), population, and household incomes from 2020 to 2021 and compare to one of the states that have an increasing population (Texas) to see if our hypothesis about California residents is not able to afford housing costs is the reason for the decreasing in population."
    ]
   },
   {
@@ -12772,7 +12780,7 @@
    "source": [
     "4. **Does increase in housing costs affect the decreasing in California's populations from 2020 to 2021?**\n",
     "\n",
-    "Based on the p-value from hypothesis tests in `Relationship Between California's Housing Costs and Population` for both rentals and home values we can see that both p-values are smaller than alpha (1%), therefore, we are able to reject the null hypothesis that \"there is no relationship between increasing in cost of housing in California and the decreasing in California's populations from 2020 to 2021.\" Therefore, the increase in housing costs affect the decreasing in California's populations because there is a relationship between increasing in cost of housing in California and the decreasing in California's populations from 2020 to 2021."
+    "Based on the p-value from hypothesis tests in `Relationship Between California's Housing Costs and Population` for both rentals and home values we can see that both p-values are smaller than alpha (1%), therefore, we are able to reject the null hypothesis that \"there is no relationship between increasing in cost of housing in California and the decreasing in California's populations from 2020 to 2021.\" Therefore, the increase in housing costs affects the decrease in California's population because there is a relationship between increases in the cost of housing in California and the decrease in California's population from 2020 to 2021."
    ]
   },
   {
