--- a/EDACheckpointGroup_Sp23_AAA-H.ipynb
+++ b/EDACheckpointGroup_Sp23_AAA-H.ipynb
@@ -12812,13 +12812,13 @@
     "    - **In 2020**, Texas residents spent approximately 20.587% of their income on housing.\n",
     "    - **In 2021**, this percentage slightly increased to 20.695%.\n",
     "\n",
-    "That means, on average, residents in California are spending a higher percentage of their income on housing compared to Texas. Furthermore, on the tables `california_household_income_2020`, `california_household_income_2021`, `texax_household_income_2020`, `texax_household_income_2021`, `california_housing_costs_2020`, `ccalifornia_housing_costs_2021`, `texas_housing_costs_2020`, and `texas_housing_costs_2021`, we can see the economic conditions in California and Texas from 2020 to 2021:\n",
+    "That means, on average, residents in California are spending a higher percentage of their income on housing compared to Texas. Furthermore, on the tables `california_household_income_2020`, `california_household_income_2021`, `texas_household_income_2020`, `texas_household_income_2021`, `california_housing_costs_2020`, `ccalifornia_housing_costs_2021`, `texas_housing_costs_2020`, and `texas_housing_costs_2021`, we can see the economic conditions in California and Texas from 2020 to 2021:\n",
     "\n",
-    "- **Median Household Income:** In both states, the median household income increased from 2020 to 2021. In California, it increased from $78,672 to $84,097, and in Texas, it increased from $63,826 to $67,321.\n",
-    "- **Median Housing Costs:** Housing costs also increased in both states during this period. In California, the median monthly housing cost increased from $1,688 in 2020 to $1,791 in 2021. In Texas, the median monthly housing cost increased from $1,095 in 2020 to $1,161 in 2021.\n",
+    "- **Median Household Income:** In both states, the median household income increased from 2020 to 2021. In California, it increased from `$78,672` to `$84,097`, and in Texas, it increased from `$63,826` to `$67,321`.\n",
+    "- **Median Housing Costs:** Housing costs also increased in both states during this period. In California, the median monthly housing cost increased from `$1,688` in 2020 to `$1,791` in 2021. In Texas, the median monthly housing cost increased from `$1,095` in 2020 to `$1,161` in 2021.\n",
     "- **Distribution of Income and Housing Costs:** The data provided also gives us the distribution of income and housing costs of each state. In both states, there are households spanning a wide range of income and housing cost brackets.\n",
-    "    - More households in the highest income category (≥ $150,000) in California than in Texas in both years.\n",
-    "    - More households with the highest housing costs (≥ $3,000) in California than in Texas in both years.\n",
+    "    - More households in the highest income category (≥ `$150,000`) in California than in Texas in both years.\n",
+    "    - More households with the highest housing costs (≥ `$3,000`) in California than in Texas in both years.\n",
     "While income and housing costs increased in both states from 2020 to 2021, California had higher median values for both metrics. Furthermore, the distribution of income and housing costs in California tended to always higher than in Texas. \n",
     "\n",
     "Then we could conduct a correlation analysis between the changes in housing prices and changes in population for both states in `part 3` and find a negative correlation in California as housing prices go up and population goes down; and a positive correlation in Texas. These evidence suggesting that people are moving there despite the increase in housing costs.\n",
@@ -12826,6 +12826,12 @@
     "With that said increasing housing costs in California are causing residents to move out of state\n",
     "\n"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
