Fix format in $

--- a/EDACheckpointGroup_Sp23_AAA-H.ipynb
+++ b/EDACheckpointGroup_Sp23_AAA-H.ipynb
@@ -11987,7 +11987,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The data presented in the two graphs clearly indicate that in 2020-2021, nearly 50% of the occupied housing units in Texas had housing costs of $1,000 or less. In contrast, California had only about one-third of its housing units falling within this lower housing cost range."
+    "The data presented in the two graphs clearly indicate that in 2020-2021, nearly 50% of the occupied housing units in Texas had housing costs of `$1,000` or less. In contrast, California had only about one-third of its housing units falling within this lower housing cost range."
    ]
   },
   {
@@ -12043,7 +12043,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Based on the two graphs presented, it can be observed that a majority of the occupied housing units in Texas during 2020-2021, which accounts for around 2/3 of the total, had income levels in the range of $10,000 to $74,999 (USD) allocated for housing expenses. In contrast, approximately 50% of the housing units in California fell within this income range."
+    "Based on the two graphs presented, it can be observed that a majority of the occupied housing units in Texas during 2020-2021, which accounts for around 2/3 of the total, had income levels in the range of  `$10,000` to `$74,999` (USD) allocated for housing expenses. In contrast, approximately 50% of the housing units in California fell within this income range."
    ]
   },
   {
