--- a/FinalProjectGroup_Sp23_AAA-H.ipynb
+++ b/FinalProjectGroup_Sp23_AAA-H.ipynb
@@ -34,7 +34,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our project investigates the rising housing prices in California and their impact on the state's population. With California's high population and limited land area, housing affordability has become a significant concern. As California residents ourselves, we have experienced the pressure of increasing rental costs, especially during the COVID-19 pandemic. Our goal is to analyze historical housing cost trends in California, compare them to other states, especially Texas, in order to understand the relationship between rising housing expenses and population dynamics. Through this research, we aim to provide insights into the socioeconomic consequences and contribute to discussions on addressing these challenges in California."
+    "Our project investigates the rising housing prices in California and their impact on the state's population. With California's high population and limited land area, housing affordability has become a significant concern. As California residents ourselves, we have experienced the pressure of increasing rental costs, especially during the COVID-19 pandemic, so our goal is to analyze historical housing cost trends in California, compare them to other states, especially Texas, in order to understand the relationship between rising housing expenses and population dynamics. Through this research, we aim to provide insights into the socioeconomic consequences and contribute to discussions on addressing these challenges in California.  \n",
+    "Here is our final video [link](https://www.youtube.com/watch?v=jhC5SpYjPTY&ab_channel=HuyNguyen)."
    ]
   },
   {
