--- a/FinalProjectGroup_Sp23_AAA-H.ipynb
+++ b/FinalProjectGroup_Sp23_AAA-H.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# COGS 108 - Final Project (change this to your project's title)"
+    "# COGS 108 - Impact of Rising Housing Prices on California's Population: A Comparative Analysis with Texas"
    ]
   },
   {
@@ -12970,7 +12970,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
