--- a/FinalProjectGroup_Sp23_AAA-H.ipynb
+++ b/FinalProjectGroup_Sp23_AAA-H.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# COGS 108 - Impact of Rising Housing Prices on California's Population: A Comparative Analysis with Texas"
+    "# COGS 108 - Housing Price Impact on California's Population: Comparative Analysis with Texas"
    ]
   },
   {
